--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ add_custom_command(
 	POST_BUILD
 	COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DManager.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
+	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DLipsync.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/cubism/Samples/Resources ${CMAKE_CURRENT_BINARY_DIR}
 )
 
