develop: fix bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,12 +61,13 @@ add_custom_command(
 	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/lib/libGLEW.a
 	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/liblive2DManager.a
 	COMMAND ar r lib${PROJECT_NAME}.a *.o
+	COMMAND rm -f *.o
 	COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DManager.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DLipsync.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/cubism/Samples/Resources ${CMAKE_CURRENT_BINARY_DIR}
 )
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${OBJECT_NAME}.a DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}.a DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 add_library(live2DSprite STATIC IMPORTED)
