develop: change codestyle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(live2DSprite)
+project(Live2DSprite)
 
 # Set directory paths.
 set(CORE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cubism/Core)
@@ -42,48 +42,39 @@ find_package(OpenGL REQUIRED)
 # Find SDL libraries
 find_package(SDL2 REQUIRED)
 
-add_library(live2DManager STATIC)
+add_library(Live2DManager STATIC)
 # Add source files.
 add_subdirectory(src)
 # Link libraries to app.
-target_link_libraries(live2DManager
+target_link_libraries(Live2DManager
   SDL2::SDL2
   Framework
 )
 # Specify include directories.
-target_include_directories(live2DManager PRIVATE ${STB_PATH})
+target_include_directories(Live2DManager PRIVATE ${STB_PATH})
 
 add_custom_command(
-	TARGET live2DManager
+	TARGET Live2DManager
 	POST_BUILD
 	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/framework/libFramework.a
 	COMMAND ar x ${CORE_PATH}/lib/linux/x86_64/libLive2DCubismCore.a
 	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/lib/libGLEW.a
-	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/liblive2DManager.a
+	COMMAND ar x ${CMAKE_CURRENT_BINARY_DIR}/libLive2DManager.a
 	COMMAND ar r lib${PROJECT_NAME}.a *.o
 	COMMAND rm -f *.o
 	COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/include
-	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DManager.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
-	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/live2DLipsync.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
+	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/Live2DManager.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
+	COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/src/Live2DLipSync.hpp ${CMAKE_CURRENT_BINARY_DIR}/include
 	COMMAND cp -r ${CMAKE_CURRENT_SOURCE_DIR}/cubism/Samples/Resources ${CMAKE_CURRENT_BINARY_DIR}
 )
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}.a DESTINATION ${CMAKE_INSTALL_LIBDIR})
 install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-add_library(live2DSprite STATIC IMPORTED)
-# Find library path.
-set_target_properties(live2DSprite
-  PROPERTIES
-  IMPORTED_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/liblive2DSprite.a
-  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_BINARY_DIR}/include
-)
 set(TEST_NAME live2d-sprite)
 add_executable(${TEST_NAME})
 set(TEST_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test)
 target_link_libraries(${TEST_NAME}
-	live2DSprite
-	SDL2::SDL2
-	OpenGL::GL
+	Live2DManager
 )
 add_subdirectory(test)
 target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/include)
