--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
-target_sources(live2DManager
+target_sources(Live2DManager
 PRIVATE
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DManager.hpp
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DManager.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DUtils.hpp
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DUtils.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DModel.hpp
-	${CMAKE_CURRENT_SOURCE_DIR}/live2DModel.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DManager.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DManager.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DUtils.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DUtils.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DModel.hpp
+	${CMAKE_CURRENT_SOURCE_DIR}/Live2DModel.cpp
 )
